@@ -1,5 +1,9 @@
 2020-10-01 Wiley E. Hill <wileyhill@gmail.com>
 
+    * src/iface/i_command.c: Add function documentation:
+
+        * i_command_router
+
     * src/object/o_buffer.c: Utilize return list from geda_struct_place_set_place_list
       and eliminate call to geda_struct_place_get_place_list.
 
